# fundingscape

./: .gitignore  HANDOFF.md  LICENSE  Makefile  PLAN.md  README.md  REPORT.md  funding-landscape-prompt.md  moar-data-issues.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
.beads/hooks/: post-checkout  post-merge  pre-commit  pre-push
data/: qa_applications_table.md  qa_fp_audit.md
manual/: foundations.yaml  german_federal.yaml  international.yaml
scripts/: enrich_openaire_abstracts.py  export_qa_table.py  normalize_currency.py  plot_qa_funding.py  quality_audit.py  sample_qa_matches.py  scrape_foerderkatalog.py  scrape_foerderkatalog_details.py  scrape_gepris.py  scrape_gepris_persons.py  seed_quantum_applications.py
src/fundingscape/: __init__.py  cache.py  currency.py  db.py  dedup.py  models.py  qa_db.py  qa_funding.py  qa_models.py  queries.py  report.py  ror.py  update.py
src/fundingscape/sources/: cordis.py  foerderkatalog.py  ft_portal.py  gepris.py  manual.py  openaire.py  openaire_bulk.py
tests/: conftest.py  test_cache.py  test_currency.py  test_db.py  test_dedup.py  test_models.py  test_qa_db.py  test_queries.py  test_scaffold.py
tests/test_sources/: test_cordis.py  test_foerderkatalog.py  test_ft_portal.py  test_gepris.py  test_openaire.py  test_openaire_bulk.py
